Bug 413181 - Account Assistant UI is missing margins
Summary: Account Assistant UI is missing margins
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwidgetsaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.63.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-19 11:21 UTC by Raphael Kubo da Costa
Modified: 2019-11-29 14:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.65
Sentry Crash Report:


Attachments
Screenshot (58.66 KB, image/png)
2019-10-19 11:21 UTC, Raphael Kubo da Costa
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Raphael Kubo da Costa 2019-10-19 11:21:13 UTC
Created attachment 123335 [details]
Screenshot

See the attached screenshot: the labels and buttons all look too close to the window border compared to regular windows and dialogs.
Comment 1 Laurent Montel 2019-10-19 13:50:22 UTC
I confirm it . I will look at it soon.
Comment 2 Laurent Montel 2019-10-22 05:13:30 UTC
It seems to be a theme bug as we have the same problem on ./kassistantdialogtest in kwidgetsaddons and it seems that it doesn't change margin here.

I don't know theme so I can"t fix it :(
Comment 3 Raphael Kubo da Costa 2019-10-23 17:17:47 UTC
I've tried changing the theme and still had the same results. Changing component to kwidgetaddons since this is also affecting kassistantdialogtest.
Comment 4 Christoph Feck 2019-11-21 16:16:31 UTC
Regression from the patch that removed margins in KPageDialog for the KCM redesign. Nate, could you check with the VDG what's the best way forward to fix this?

To verify, run ./bin/kassistantdialogtest in build dir.
Comment 5 Nate Graham 2019-11-21 16:23:12 UTC
This was fixed for standalone KCM windows in Bug 411161.

I guess we need the same thing here.
Comment 6 Nate Graham 2019-11-21 17:04:46 UTC
Patch: https://phabricator.kde.org/D25444
Comment 7 Nate Graham 2019-11-29 14:27:04 UTC
Git commit 969ec7f2e964ddb5f2aaa6a70e2d272cf21e9202 by Nate Graham.
Committed on 29/11/2019 at 14:26.
Pushed by ngraham into branch 'master'.

Unify KPageDialog margin handling into KPageDialog itself

Summary:
This prevents us from having to manually specify the margins in all of the subclasses.
FIXED-IN: 5.65

Test Plan:
Assistant dialog now has correct margins: {F7777208}

App settings window still has correct margins: {F7777746}

After applying D25451, Multi-KCM KCMShell dialog still has correct margins: {F7777747}

After applying D25451, single-KCM KCMShell dialog still has correct margins: {F7777748}

Please test extensively; this code seems somewhat fragile.

Reviewers: #frameworks, cfeck, mart

Reviewed By: mart

Subscribers: kossebau, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D25444

M  +15   -5    src/kpagedialog.cpp
M  +0    -1    src/kpageview.cpp
M  +0    -5    src/kpagewidget.cpp

https://commits.kde.org/kwidgetsaddons/969ec7f2e964ddb5f2aaa6a70e2d272cf21e9202