Unify KPageDialog margin handling into KPageDialog itself

Summary:
This prevents us from having to manually specify the margins in all of the subclasses.

BUG: 413181
FIXED-IN: 5.65

Test Plan:
Assistant dialog now has correct margins: {F7777208}

App settings window still has correct margins: {F7777746}

After applying D25451, Multi-KCM KCMShell dialog still has correct margins: {F7777747}

After applying D25451, single-KCM KCMShell dialog still has correct margins: {F7777748}

Please test extensively; this code seems somewhat fragile.

Reviewers: #frameworks, cfeck, mart

Reviewed By: mart

Subscribers: kossebau, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D25444